# BACK-END/docs/swagger.json
@@ -13,6 +13,29 @@
         }
     },
     "paths": {
+        "/laporan": {
+            "get": {
+                "description": "Get a list of Laporan.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Laporan"
+                ],
+                "summary": "Get all Laporan.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Laporan"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/listUser": {
             "get": {
                 "description": "Get a list of User.",
@@ -639,6 +662,29 @@
                     "type": "integer"
                 },
                 "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Laporan": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "metode_pembayaran": {
+                    "type": "string"
+                },
+                "order_id": {
+                    "type": "integer"
+                },
+                "pesanan": {
+                    "type": "string"
+                },
+                "tenant": {
+                    "type": "string"
+                },
+                "total": {
                     "type": "integer"
                 }
             }
